fix[style]: Fix to slider page shifts for 1px every slide Also some css cleanup

--- a/frontend/src/shared/components/GamesSliderPage/GamesSliderPage.scss
+++ b/frontend/src/shared/components/GamesSliderPage/GamesSliderPage.scss
@@ -1,7 +1,6 @@
 .slider_page_row {
-  flex: 0 0 1281px;
+  flex: 0 0 1280px;
   width: 1362px;
-  // min-width: 1362px;
   display: flex;
   gap: 26px;
   flex-direction: row;
